# llm-cpp

./: .gitignore  CMakeLists.txt  README.md  README.zh-CN.md
.github/: copilot-instructions.md  copilot-instructions.zh-CN.md
data/: README.md  README.zh-CN.md
docs/: README.md  README.zh-CN.md  attention_indexing_trace.md  attention_indexing_trace.zh-CN.md  autograd_and_memory_layout.md  autograd_and_memory_layout.zh-CN.md  backend_design_cpu_cuda_hip.md  backend_design_cpu_cuda_hip.zh-CN.md  backend_implementation_plan.md  backend_implementation_plan.zh-CN.md  hardware_stack_and_portability.md  hardware_stack_and_portability.zh-CN.md  learn_by_hand_walkthrough.md  learn_by_hand_walkthrough.zh-CN.md  project_lifecycle_guidelines.md  project_lifecycle_guidelines.zh-CN.md  tokenizer_choice_gpt2_bpe_vs_sentencepiece.md  tokenizer_choice_gpt2_bpe_vs_sentencepiece.zh-CN.md  training_and_inference_walkthrough.md  training_and_inference_walkthrough.zh-CN.md  transformer_math_to_code.md  transformer_math_to_code.zh-CN.md
docs/architecture/: cpp_structures_to_gpt_decoder_math.md  cpp_structures_to_gpt_decoder_math.zh-CN.md  folder_layout_and_targets.md  folder_layout_and_targets.zh-CN.md  hidden_states_vs_attention_matrices.md  hidden_states_vs_attention_matrices.zh-CN.md
docs/notes/: 2026-01-16_project_goal_and_next_steps.md  2026-01-16_project_goal_and_next_steps.zh-CN.md  2026-01-25_backend_seam_bmm_vs_cuda.md  2026-01-25_backend_seam_bmm_vs_cuda.zh-CN.md  2026-01-25_bpe_tests_and_features.md  2026-01-25_bpe_tests_and_features.zh-CN.md  2026-01-25_byte_tokenizer_impl_and_test.md  2026-01-25_byte_tokenizer_impl_and_test.zh-CN.md  2026-01-25_cpu_backend_and_tokenizer_discussion.md  2026-01-25_cpu_backend_and_tokenizer_discussion.zh-CN.md  2026-01-25_tokenizer_plugin_design.md  2026-01-25_tokenizer_plugin_design.zh-CN.md
docs/variants/mha/: README.md  README.zh-CN.md  learn_by_hand.md  learn_by_hand.zh-CN.md  sample_processing_walkthrough.md  sample_processing_walkthrough.zh-CN.md  what_changed_vs_core.md  what_changed_vs_core.zh-CN.md  why_multi_head_attention.md  why_multi_head_attention.zh-CN.md
src/: checkpoint.cpp  checkpoint.h  data.cpp  data.h  main.cpp  model.cpp  model.h  ops.cpp  ops.h  optim.cpp  optim.h  tensor.cpp  tensor.h  util.cpp  util.h
src/backend/: backend.h  cpu_backend.cpp  cpu_backend.h  registry.cpp  registry.h
src/tokenizer/: bpe_tokenizer.cpp  bpe_tokenizer.h  byte_tokenizer.cpp  byte_tokenizer.h  tokenizer.h
src/variants/mha/: mha_attention.cpp  mha_attention.h
tests/: bpe_merges.txt  bpe_vocab.txt  test_main.cpp
